--- a/#source/scss/main-scss/variables.scss
+++ b/#source/scss/main-scss/variables.scss
@@ -1,6 +1,6 @@
 // Font
 $fontfamily: 'Montserrat',
-   sans-serif;
+	sans-serif;
 
 
 // Colors
@@ -10,3 +10,4 @@ $white: white;
 $blue: #519DF0;
 $red: #FF2E2E;
 $violent: #4450DA;
+$orange: #F15427;
