--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -15,6 +15,11 @@ body {
 	color: $dark;
 	background-color: $white;
 	font-family: $fontfamily;
+	overflow-x: hidden;
+}
+
+.main-wrapper {
+	overflow: hidden;
 }
 
 h1,
@@ -59,9 +64,12 @@ a {
 // Connecting pages style
 @import "main-scss/header.scss";
 @import "main-scss/footer.scss";
-// @import "main-scss/form.scss";
+@import "main-scss/form.scss";
 @import "main-scss/btn.scss";
 
+@import "product-card.scss";
+
+@import "main-screen.scss";
 @import "what-about.scss";
 @import "autosearch.scss";
 @import "cards.scss";
