--- a/#source/scss/main-scss/form.scss
+++ b/#source/scss/main-scss/form.scss
@@ -1,93 +1,61 @@
-.form-select {
-	position: relative;
-	font-size: 1.8rem;
-	line-height: 1;
-	font-weight: 700;
-	color: #10284A;
-	border: 1px solid #8BC8FF;
-	border-radius: .6rem;
-	padding: 1rem 2.5rem;
-	height: 4rem;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	background-image: url(/img/icons/caret_down.svg);
-	background-position: 98%;
-	background-size: 2rem 1.5rem;
-	background-repeat: no-repeat;
-	transition: background-image .2s ease;
-}
+.group {
+	display: flex;
+	flex-direction: column;
 
-.form-search {
-	font-size: 1.8rem;
-	line-height: 1;
-	font-weight: 700;
-	color: #10284A;
-	border: 1px solid #8BC8FF;
-	border-radius: .6rem;
-	padding: 1rem 2.5rem;
-
-	&::placeholder {
-		font-weight: 700;
-		color: #10284A;
-	}
-}
-
-.form-control {
-	position: relative;
-	font-size: 1.8rem;
-	line-height: 1;
-	font-weight: 700;
-	color: #10284A;
-	border: 1px solid #8BC8FF;
-	border-radius: .6rem;
-	padding: 1rem 2.5rem;
-	height: 4rem;
-	margin-top: 1rem;
-
-	&::placeholder {
-		color: #10284A;
-	}
-}
-
-.form-textarea {
-	position: relative;
-	font-size: 2rem;
-	line-height: 1.2;
-	color: #10284A;
-	border: 1px solid #8BC8FF;
-	border-radius: .6rem;
-	padding: 1rem 2.5rem;
-	margin-top: 1rem;
-
-	&::placeholder {
-		color: #7B7B7B;
-	}
-}
-
-.form-group {
-	.form-label {
-		font-family: 'Poppins';
+	label {
+		font-family: 'Montserrat';
 		font-weight: 400;
-		font-size: 1.8rem;
-		line-height: 1.5;
-		letter-spacing: -0.02em;
-		color: #8BC8FF;
-		margin-bottom: 0;
+		font-size: 1.4rem;
+		line-height: 1.3;
+		color: #656565;
+		margin-bottom: .8rem;
 	}
 
-	.form-control {
-		margin-top: 0;
+	input,
+	textarea {
+		font-family: 'Montserrat';
+		font-size: 1.6rem;
+		font-weight: 400;
+		color: $dark;
+		padding: 1.8rem 1.6rem;
+
+		&::placeholder {
+			color: $dark;
+		}
+	}
+
+	&.control {
+		input {
+			line-height: 1;
+			border: 1px solid #ECECEC;
+			border-radius: .8rem;
+		}
+	}
+
+	&.textarea {
+		textarea {
+			line-height: 1.25;
+			border: 1px solid #F6F6F6;
+			border-radius: .6rem;
+		}
 	}
 
 	&.check {
+		flex-direction: row;
 		width: fit-content;
 		position: relative;
+
+		label {
+			font-size: 1.6rem;
+			color: $dark;
+			margin-bottom: 0;
+		}
 
 		.checkbox {
 			position: absolute;
 			opacity: 0;
 			width: 100%;
-			height: 2rem;
+			height: 2.4rem;
 		}
 
 		.checkbox+.form-label {
@@ -102,22 +70,25 @@
 			&::before {
 				content: '';
 				display: inline-block;
-				width: 2rem;
-				height: 2rem;
+				width: 2.4rem;
+				height: 2.4rem;
 				flex-shrink: 0;
 				flex-grow: 0;
-				border: 1px solid #8BC8FF;
+				border: 1px solid #ECECEC;
 				border-radius: 0.3rem;
-				margin-right: 0.5em;
+				margin-right: 0.4em;
 				background-repeat: no-repeat;
 				background-position: center center;
-				background-size: 100% 100%;
+				background-size: 53% 51%;
+				background-color: #FAFAFA;
+				transition: all .3s ease;
 			}
 		}
 
 		.checkbox:checked+.form-label::before {
-			background-color: white;
 			background-image: url(/img/icons/check.svg);
+			border: 1px solid #8BC8FF;
+			background-color: #EDF4FD;
 		}
 
 		.checkbox:not(:disabled):not(:checked)+.form-label:hover::before {
@@ -125,14 +96,14 @@
 		}
 
 		.checkbox:not(:disabled):active+.form-label::before {
-			background-color: white;
-			border-color: #8BC8FF;
+			background-color: inherit;
+			border-color: inherit;
 		}
 
-		.checkbox:focus:not(:checked)+.form-label::before {
-			border-color: #8BC8FF;
-			box-shadow: 1px 1px 1px #8BC8FF;
-		}
+		// .checkbox:focus:not(:checked)+.form-label::before {
+		// 	border-color: #8BC8FF;
+		// 	box-shadow: 1px 1px 1px #8BC8FF;
+		// }
 
 		.checkbox:disabled+.form-label::before {
 			background-color: #e9ecef;
@@ -140,75 +111,96 @@
 	}
 }
 
-.group-wrapper {
-	display: flex;
-	align-items: flex-start;
-	flex-direction: column;
-	margin-bottom: 1rem;
 
-	&.radio {
-		align-items: center;
-		flex-direction: row;
+// .form-select {
+// 	position: relative;
+// 	font-size: 1.8rem;
+// 	line-height: 1;
+// 	font-weight: 700;
+// 	color: #10284A;
+// 	border: 1px solid #8BC8FF;
+// 	border-radius: .6rem;
+// 	padding: 1rem 2.5rem;
+// 	height: 4rem;
+// 	-webkit-appearance: none;
+// 	-moz-appearance: none;
+// 	background-image: url(/img/icons/caret_down.svg);
+// 	background-position: 98%;
+// 	background-size: 2rem 1.5rem;
+// 	background-repeat: no-repeat;
+// 	transition: background-image .2s ease;
+// }
 
-		.form-label {
-			display: flex;
-			align-items: center;
-			flex-direction: row;
-			margin: 0;
-			font-size: 2.6rem;
-			line-height: 1;
-			color: #10284A;
-			font-weight: 700;
-			font-family: 'Poppins';
-			cursor: pointer;
-			position: relative;
-			user-select: none;
 
-			&:before {
-				content: '';
-				display: inline-block;
-				width: 3.6rem;
-				height: 3.6rem;
-				border: 1px solid #7B7B7B;
-				border-radius: 50%;
-				margin-right: 1.5rem;
-			}
+// .group-wrapper {
+// 	display: flex;
+// 	align-items: flex-start;
+// 	flex-direction: column;
+// 	margin-bottom: 1rem;
 
-			&:hover:before {
-				filter: brightness(120%);
-			}
-		}
+// 	&.radio {
+// 		align-items: center;
+// 		flex-direction: row;
 
-		.form-radio {
-			position: absolute;
-			opacity: 0;
-			width: 0;
-			height: 0;
+// 		.form-label {
+// 			display: flex;
+// 			align-items: center;
+// 			flex-direction: row;
+// 			margin: 0;
+// 			font-size: 2.6rem;
+// 			line-height: 1;
+// 			color: #10284A;
+// 			font-weight: 700;
+// 			font-family: 'Poppins';
+// 			cursor: pointer;
+// 			position: relative;
+// 			user-select: none;
 
-			&:checked~label:before {
-				background: url(/img/icons/circle.svg);
-				background-repeat: no-repeat;
-				background-position: center center;
-				background-size: 100% 75%;
-			}
+// 			&:before {
+// 				content: '';
+// 				display: inline-block;
+// 				width: 3.6rem;
+// 				height: 3.6rem;
+// 				border: 1px solid #7B7B7B;
+// 				border-radius: 50%;
+// 				margin-right: 1.5rem;
+// 			}
 
-			&:disabled~label {
-				filter: opacity(0.5);
-			}
-		}
-	}
-}
+// 			&:hover:before {
+// 				filter: brightness(120%);
+// 			}
+// 		}
 
-@include respond(es-screen) {
-	.form-select {
-		padding: 1rem 1.5rem;
-	}
+// 		.form-radio {
+// 			position: absolute;
+// 			opacity: 0;
+// 			width: 0;
+// 			height: 0;
 
-	.form-search {
-		padding: 1rem 1.5rem;
-	}
+// 			&:checked~label:before {
+// 				background: url(/img/icons/circle.svg);
+// 				background-repeat: no-repeat;
+// 				background-position: center center;
+// 				background-size: 100% 75%;
+// 			}
 
-	.form-control {
-		padding: 1rem 1.5rem;
-	}
-}
+// 			&:disabled~label {
+// 				filter: opacity(0.5);
+// 			}
+// 		}
+// 	}
+// }
+
+// @include respond(es-screen) {
+// 	.form-select {
+// 		padding: 1rem 1.5rem;
+// 	}
+
+// 	.form-search {
+// 		padding: 1rem 1.5rem;
+// 	}
+
+// 	.form-control {
+// 		padding: 1rem 1.5rem;
+// 	}
+// }
