--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ body {
 	color: #252525;
 	background-color: white;
 	font-family: "Montserrat", sans-serif;
+	overflow-x: hidden;
+}
+
+.main-wrapper {
+	overflow: hidden;
 }
 
 h1,
@@ -259,6 +264,134 @@ a:hover {
 	color: #555353;
 }
 
+.group {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+}
+.group label {
+	font-family: "Montserrat";
+	font-weight: 400;
+	font-size: 1.4rem;
+	line-height: 1.3;
+	color: #656565;
+	margin-bottom: 0.8rem;
+}
+.group input,
+.group textarea {
+	font-family: "Montserrat";
+	font-size: 1.6rem;
+	font-weight: 400;
+	color: #252525;
+	padding: 1.8rem 1.6rem;
+}
+.group input::-webkit-input-placeholder, .group textarea::-webkit-input-placeholder {
+	color: #252525;
+}
+.group input::-moz-placeholder, .group textarea::-moz-placeholder {
+	color: #252525;
+}
+.group input:-ms-input-placeholder, .group textarea:-ms-input-placeholder {
+	color: #252525;
+}
+.group input::-ms-input-placeholder, .group textarea::-ms-input-placeholder {
+	color: #252525;
+}
+.group input::placeholder,
+.group textarea::placeholder {
+	color: #252525;
+}
+.group.control input {
+	line-height: 1;
+	border: 1px solid #ECECEC;
+	border-radius: 0.8rem;
+}
+.group.textarea textarea {
+	line-height: 1.25;
+	border: 1px solid #F6F6F6;
+	border-radius: 0.6rem;
+}
+.group.check {
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
+	width: fit-content;
+	position: relative;
+}
+.group.check label {
+	font-size: 1.6rem;
+	color: #252525;
+	margin-bottom: 0;
+}
+.group.check .checkbox {
+	position: absolute;
+	opacity: 0;
+	width: 100%;
+	height: 2.4rem;
+}
+.group.check .checkbox + .form-label {
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
+	color: #10284A;
+	font-size: 1.8rem;
+	line-height: 2.2rem;
+}
+.group.check .checkbox + .form-label::before {
+	content: "";
+	display: inline-block;
+	width: 2.4rem;
+	height: 2.4rem;
+	-ms-flex-negative: 0;
+	    flex-shrink: 0;
+	-webkit-box-flex: 0;
+	    -ms-flex-positive: 0;
+	        flex-grow: 0;
+	border: 1px solid #ECECEC;
+	border-radius: 0.3rem;
+	margin-right: 0.4em;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 53% 51%;
+	background-color: #FAFAFA;
+	-webkit-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+.group.check .checkbox:checked + .form-label::before {
+	background-image: url(/img/icons/check.svg);
+	border: 1px solid #8BC8FF;
+	background-color: #EDF4FD;
+}
+.group.check .checkbox:not(:disabled):not(:checked) + .form-label:hover::before {
+	border-color: #888888;
+}
+.group.check .checkbox:not(:disabled):active + .form-label::before {
+	background-color: inherit;
+	border-color: inherit;
+}
+.group.check .checkbox:disabled + .form-label::before {
+	background-color: #e9ecef;
+}
+
 .btn {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -300,6 +433,239 @@ a:hover {
 	line-height: 18px;
 	color: #519DF0;
 	border: 1px solid #519DF0;
+}
+
+.product-card:hover .bottom-content .block-wrapper:last-of-type h5 {
+	color: #F15427;
+}
+.product-card img {
+	width: 100%;
+}
+.product-card .card-images.new {
+	position: relative;
+}
+.product-card .card-images.new:before {
+	content: "NEW";
+	position: absolute;
+	top: 1.7rem;
+	left: 1.7rem;
+	background: rgba(255, 255, 255, 0.6);
+	border-radius: 3px;
+	color: #F15427;
+	font-weight: 600;
+	font-size: 1.2rem;
+	line-height: 1.6;
+	font-family: "Montserrat";
+	padding: 0.2rem 1.2rem;
+	z-index: 2;
+}
+.product-card .bottom-content {
+	padding: 2rem 2rem 2.2rem;
+	border: 0.2rem solid #E2E2E2;
+	border-top: none;
+	border-radius: 0 0 1.2rem 1.2rem;
+}
+.product-card .bottom-content .name {
+	font-weight: 600;
+	font-size: 1.6rem;
+	line-height: 1.5;
+}
+.product-card .bottom-content .block-wrapper:first-of-type {
+	display: -ms-grid;
+	display: grid;
+	margin: 0 -1rem;
+	margin-bottom: 2rem;
+	grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+}
+.product-card .bottom-content .block-wrapper:first-of-type .wrapper-item {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	margin: 0 1rem;
+	padding: 1.2rem 0;
+	border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1019607843);
+	font-weight: 500;
+	font-size: 1.2rem;
+	line-height: 1.3;
+}
+.product-card .bottom-content .block-wrapper:first-of-type .wrapper-item p {
+	color: #555353;
+	margin-right: 0.5rem;
+}
+.product-card .bottom-content .block-wrapper:first-of-type .wrapper-item span {
+	color: #252525;
+}
+.product-card .bottom-content .block-wrapper:last-of-type {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+.product-card .bottom-content .block-wrapper:last-of-type h5 {
+	font-weight: 600;
+	font-size: 2rem;
+	line-height: 1.5;
+	-webkit-transition: color 0.3s ease;
+	-o-transition: color 0.3s ease;
+	transition: color 0.3s ease;
+}
+.product-card .bottom-content .block-wrapper:last-of-type .btn {
+	margin: 0 1rem;
+}
+.product-card .bottom-content .block-wrapper:last-of-type .img-wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	background: rgba(81, 157, 240, 0.1019607843);
+	border-radius: 0.6rem;
+	padding: 0.8rem;
+	position: relative;
+}
+.product-card .bottom-content .block-wrapper:last-of-type .img-wrapper:hover .compare {
+	visibility: visible;
+	opacity: 1;
+}
+.product-card .bottom-content .block-wrapper:last-of-type .compare {
+	width: 13.6rem;
+	position: absolute;
+	top: -6rem;
+	left: -5rem;
+	font-weight: 600;
+	font-size: 0.9rem;
+	line-height: 1.3;
+	-webkit-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+	-webkit-box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.05);
+	        box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.05);
+	opacity: 0;
+	visibility: hidden;
+}
+.product-card .bottom-content .block-wrapper:last-of-type .compare > div {
+	text-align: center;
+	height: 100%;
+	background: #FFFFFF;
+	border-radius: 0.6rem;
+	padding: 1.2rem 1rem;
+	position: relative;
+}
+.product-card .bottom-content .block-wrapper:last-of-type .compare > div:before {
+	content: "";
+	position: absolute;
+	bottom: -1rem;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
+	border-left: 1rem solid transparent;
+	border-right: 1rem solid transparent;
+	border-top: 1rem solid white;
+}
+.product-card .bottom-content .block-wrapper:last-of-type .compare a {
+	color: #555353;
+	text-align: center;
+	font-weight: inherit;
+	font-size: inherit;
+	line-height: inherit;
+}
+
+.main-screen {
+	padding: 2.5rem 0 3.2rem;
+	height: 100%;
+	max-height: 56.5rem;
+	background: -o-linear-gradient(315deg, #CCD4DC 0%, rgba(221, 225, 230, 0.03) 46.23%);
+	background: linear-gradient(135deg, #CCD4DC 0%, rgba(221, 225, 230, 0.03) 46.23%);
+}
+.main-screen .container {
+	position: relative;
+}
+.main-screen .container::before {
+	content: "";
+	position: absolute;
+	display: block;
+	bottom: -15rem;
+	right: -14rem;
+	max-width: 54rem;
+	width: 100%;
+	height: 100%;
+	max-height: 62rem;
+	background: url(/img/icons/world-map.svg) bottom/contain no-repeat;
+	z-index: -1;
+}
+.main-screen .wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	width: 100%;
+}
+.main-screen .wrapper .form-block {
+	width: 100%;
+	background: white;
+	max-width: 32rem;
+	border-radius: 1.2rem;
+	margin-right: 2rem;
+	padding: 3.2rem;
+}
+.main-screen .wrapper .form-block form {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+}
+.main-screen .wrapper .form-block form .btn {
+	margin: 0 auto;
+	margin-top: 2rem;
+}
+.main-screen .wrapper .right-block {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 70rem;
+	margin-right: 12rem;
+}
+.main-screen .wrapper .right-block h1 {
+	font-weight: 400;
+	font-size: 6.4rem;
+	line-height: 1.25;
+	color: #D1D2D3;
+	margin-bottom: 3rem;
+}
+.main-screen .wrapper .right-block h2 {
+	padding-right: 1rem;
+	margin-right: 2rem;
+	text-align: end;
+	font-family: "Dancing Script";
+	font-weight: 400;
+	font-size: 4.8rem;
+	line-height: 1.16;
+	background: -o-linear-gradient(245.32deg, #C2C6CB 95.25%, rgba(255, 255, 255, 0.2) 120.55%);
+	background: linear-gradient(204.68deg, #C2C6CB 95.25%, rgba(255, 255, 255, 0.2) 120.55%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	background-clip: text;
+}
+.main-screen .wrapper .right-block .img-wrapper {
+	max-width: 50rem;
+	position: relative;
+	left: -2rem;
+	margin-right: 5rem;
+}
+.main-screen .wrapper .right-block .img-wrapper img {
+	width: 100%;
+	height: 100%;
 }
 
 .what-about {
@@ -371,7 +737,7 @@ a:hover {
 	}
 }
 .autosearch {
-	padding-top: 10rem;
+	padding-top: 15rem;
 }
 .autosearch .wrapper {
 	display: -webkit-box;
@@ -416,132 +782,6 @@ a:hover {
 	background: -webkit-gradient(linear, left top, left bottom, from(#F1F1F1), color-stop(42.7%, #EBEBEB), color-stop(98.3%, #FFFFFF));
 	background: -o-linear-gradient(top, #F1F1F1 0%, #EBEBEB 42.7%, #FFFFFF 98.3%);
 	background: linear-gradient(180deg, #F1F1F1 0%, #EBEBEB 42.7%, #FFFFFF 98.3%);
-}
-.cards .cards-global .swiper-slide img {
-	width: 100%;
-}
-.cards .cards-global .swiper-slide .bottom-content {
-	padding: 2rem 2rem 2.2rem;
-	border: 0.2rem solid #E2E2E2;
-	border-top: none;
-	border-radius: 0 0 1.2rem 1.2rem;
-}
-.cards .cards-global .swiper-slide .bottom-content .name {
-	font-weight: 600;
-	font-size: 1.6rem;
-	line-height: 1.5;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:first-of-type {
-	display: -ms-grid;
-	display: grid;
-	margin: 0 -1rem;
-	margin-bottom: 2rem;
-	-ms-grid-columns: 1fr 1fr;
-	grid-template-columns: 1fr 1fr;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:first-of-type .wrapper-item {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-	margin: 0 1rem;
-	padding: 1.2rem 0;
-	border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1019607843);
-	font-weight: 500;
-	font-size: 1.2rem;
-	line-height: 1.3;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:first-of-type .wrapper-item p {
-	color: #555353;
-	margin-right: 0.5rem;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:first-of-type .wrapper-item span {
-	color: #252525;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type h5 {
-	font-weight: 600;
-	font-size: 2rem;
-	line-height: 1.5;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .btn {
-	margin: 0 1rem;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .img-wrapper {
-	background: rgba(81, 157, 240, 0.1019607843);
-	border-radius: 0.6rem;
-	padding: 0.8rem;
-	position: relative;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .img-wrapper:hover .compare {
-	visibility: visible;
-	opacity: 1;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .compare {
-	width: 13.6rem;
-	position: absolute;
-	top: -6rem;
-	left: -5rem;
-	font-weight: 600;
-	font-size: 0.9rem;
-	line-height: 1.3;
-	-webkit-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-	-webkit-box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.05);
-	        box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.05);
-	opacity: 0;
-	visibility: hidden;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .compare > div {
-	height: 100%;
-	background: #FFFFFF;
-	border-radius: 0.6rem;
-	padding: 1.2rem 1rem;
-	position: relative;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .compare > div:before {
-	content: "";
-	position: absolute;
-	bottom: -1rem;
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	    -ms-transform: translateX(-50%);
-	        transform: translateX(-50%);
-	border-left: 1rem solid transparent;
-	border-right: 1rem solid transparent;
-	border-top: 1rem solid white;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .compare > div:after {
-	content: "";
-	position: absolute;
-	bottom: -2.5rem;
-	left: 0;
-	right: 0;
-	background: none;
-	height: 2.5rem;
-}
-.cards .cards-global .swiper-slide .bottom-content .block-wrapper:last-of-type .compare a {
-	color: #555353;
-	text-align: center;
-	font-weight: inherit;
-	font-size: inherit;
-	line-height: inherit;
 }
 .cards .container {
 	position: relative;
