--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,50 @@ a:hover {
 	border: 1px solid #519DF0;
 }
 
+.breadcrumbs {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	padding: 3.2rem 0 0 0;
+}
+.breadcrumbs a {
+	font-family: "Montserrat";
+	font-weight: 400;
+	font-size: 1.2rem;
+	line-height: 1.5;
+	position: relative;
+	color: rgba(85, 83, 83, 0.5019607843);
+	margin-right: 0.7rem;
+	padding-right: 0.7rem;
+}
+.breadcrumbs a:hover {
+	color: #252525;
+}
+.breadcrumbs a:after {
+	content: "";
+	position: absolute;
+	right: -0.2rem;
+	top: 50%;
+	width: 0.3rem;
+	height: 0.4rem;
+	background: url(/img/icons/bredcrumbs-arr.svg) center center no-repeat;
+	-webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	        transform: translateY(-50%);
+}
+.breadcrumbs a:last-of-type {
+	margin-right: 0;
+}
+.breadcrumbs a:last-of-type::after {
+	content: none;
+}
+.breadcrumbs a.cur-page {
+	color: #252525;
+}
+
 .product-card:hover .bottom-content .block-wrapper:last-of-type h5 {
 	color: #F15427;
 }
@@ -836,4 +880,94 @@ a:hover {
 }
 .cards .container .swiper-pagination.swiper-image .swiper-pagination-bullet.swiper-pagination-bullet-active {
 	background: #007AFF;
+}
+
+.about .wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	margin-top: 3rem;
+}
+.about .wrapper h1 {
+	text-align: center;
+	font-weight: 500;
+	font-size: 4.8rem;
+	line-height: 1.33;
+	color: #252525;
+	margin-bottom: 2.4rem;
+}
+.about .wrapper h2 {
+	text-align: center;
+	color: #252525;
+	font-weight: 400;
+	font-size: 2.4rem;
+	line-height: 1.5;
+	margin-bottom: 4rem;
+}
+.about .wrapper h3 {
+	color: #252525;
+	font-weight: 400;
+	font-size: 2.4rem;
+	line-height: 1.5;
+}
+.about .wrapper h3.title {
+	text-align: center;
+	color: #555353;
+	max-width: 104rem;
+	margin: 0 auto;
+	margin-bottom: 9rem;
+}
+.about .wrapper .bottom-content {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+.about .wrapper .bottom-content .text-block {
+	width: 100%;
+	max-width: 53rem;
+	margin-right: 2rem;
+}
+.about .wrapper .bottom-content .text-block h3 {
+	margin-bottom: 3.2rem;
+}
+.about .wrapper .bottom-content .text-block h4 {
+	color: #555353;
+	font-weight: 400;
+	font-size: 2rem;
+	line-height: 1.6;
+	margin-bottom: 2.4rem;
+}
+.about .wrapper .bottom-content .text-block .list-bg {
+	padding-left: 0;
+}
+.about .wrapper .bottom-content .text-block .list-bg li {
+	padding-left: 3.8rem;
+	color: #555353;
+	font-weight: 400;
+	font-size: 1.8rem;
+	line-height: 1.56;
+	margin-bottom: 1.6rem;
+	position: relative;
+}
+.about .wrapper .bottom-content .text-block .list-bg li::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	width: 2rem;
+	height: 2rem;
+	top: 0.5rem;
+	background: url(/img/icons/check-with-bg.svg);
+}
+.about .wrapper .bottom-content .img-wrapper {
+	max-width: 76.1rem;
+}
+.about .wrapper .bottom-content .img-wrapper img {
+	width: 100%;
 }
