--- a/#source/scss/main-scss/variables.scss
+++ b/#source/scss/main-scss/variables.scss
@@ -6,6 +6,7 @@ $fontfamily: 'Montserrat',
 // Colors
 $dark: #252525;
 $gray: #555353;
+$light-gray: #FAFAFA;
 $white: white;
 $blue: #519DF0;
 $red: #FF2E2E;
