--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -66,6 +66,7 @@ a {
 @import "main-scss/footer.scss";
 @import "main-scss/form.scss";
 @import "main-scss/btn.scss";
+@import "main-scss/range-slider.scss";
 
 @import "product-card.scss";
 
