--- a/#source/scss/what-about.scss
+++ b/#source/scss/what-about.scss
@@ -1,11 +1,11 @@
 .what-about {
 	padding-top: 10rem;
-
+	margin-bottom: 8rem;
 	.wrapper {
 		display: flex;
-		margin-right: auto;
+		justify-content: center;
 		padding-left: 18.5rem;
-		padding-right: 15.5rem;
+		padding-right: 18.5rem;
 
 		.block {
 			max-width: 85rem;
