--- a/#source/scss/main-scss/btn.scss
+++ b/#source/scss/main-scss/btn.scss
@@ -28,7 +28,7 @@
 
 	&.bordered {
 		border-radius: .6rem;
-		background: $white;
+		background: none;
 		padding: .7rem 2.3rem;
 		font-weight: 600;
 		font-size: 1.2rem;
