--- a/#source/scss/autosearch.scss
+++ b/#source/scss/autosearch.scss
@@ -1,4 +1,5 @@
 .autosearch {
+	background: $white;
 	padding-top: 15rem;
 
 	.wrapper {
@@ -8,13 +9,14 @@
 		max-width: 70rem;
 		margin: 0 auto;
 		position: relative;
+		z-index: 2;
 
 		&::before {
 			content: url(/img/magnifier.png);
 			position: absolute;
 			top: -1.5rem;
 			left: -14rem;
-			z-index: -1;
+			z-index: 1;
 		}
 
 		p {
@@ -25,6 +27,7 @@
 			margin-bottom: 4.8rem;
 			background: $white;
 			padding: 0 1.5rem;
+			z-index: inherit;
 		}
 	}
 }
