--- a/#source/scss/main-scss/footer.scss
+++ b/#source/scss/main-scss/footer.scss
@@ -1,67 +1,68 @@
 .footer {
-   width: 100%;
-   height: 10.4rem;
+	width: 100%;
+	height: 10.4rem;
+	background: none;
 
-   .wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      height: 100%;
-      position: relative;
+	.wrapper {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		height: 100%;
+		position: relative;
 
-      &:before {
-         content: '';
-         position: absolute;
-         top: 0;
-         left: 0;
-         right: 0;
-         height: .1rem;
-         background-color: #E2E2E2;
-      }
+		&:before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			height: .1rem;
+			background-color: #E2E2E2;
+		}
 
-      .right-block {
-         display: flex;
-         width: 100%;
-         max-width: 60rem;
+		.right-block {
+			display: flex;
+			width: 100%;
+			max-width: 60rem;
 
-         .item:last-of-type {
-            margin-left: auto;
-         }
+			.item:last-of-type {
+				margin-left: auto;
+			}
 
-         .item:first-of-type {
-            margin-left: 0;
-            margin-right: 1rem;
-         }
-      }
+			.item:first-of-type {
+				margin-left: 0;
+				margin-right: 1rem;
+			}
+		}
 
-      .item {
-         display: flex;
-         align-items: center;
-         font-size: 1.4rem;
-         min-width: fit-content;
-         margin-left: 1rem;
+		.item {
+			display: flex;
+			align-items: center;
+			font-size: 1.4rem;
+			min-width: fit-content;
+			margin-left: 1rem;
 
-         img {
-            margin-right: 1.3rem;
-         }
+			img {
+				margin-right: 1.3rem;
+			}
 
-         a {
-            font-family: 'Poppins';
-            font-size: inherit;
-            text-decoration: underline;
+			a {
+				font-family: 'Poppins';
+				font-size: inherit;
+				text-decoration: underline;
 
-            &:hover {
-               color: #F15427;
-            }
-         }
+				&:hover {
+					color: #F15427;
+				}
+			}
 
-         h5 {
-            font-size: inherit;
-            font-family: 'Roboto';
-            font-weight: 400;
-            color: $gray;
-         }
-      }
-   }
+			h5 {
+				font-size: inherit;
+				font-family: 'Roboto';
+				font-weight: 400;
+				color: $gray;
+			}
+		}
+	}
 }
