--- a/#source/scss/main-scss/form.scss
+++ b/#source/scss/main-scss/form.scss
@@ -18,6 +18,8 @@
 		font-weight: 400;
 		color: $dark;
 		padding: 1.8rem 1.6rem;
+		background: #FAFAFA;
+		border: 1px solid #F6F6F6;
 
 		&::placeholder {
 			color: $dark;
@@ -27,7 +29,6 @@
 	&.control {
 		input {
 			line-height: 1;
-			border: 1px solid #ECECEC;
 			border-radius: .8rem;
 		}
 	}
