--- a/#source/scss/what-about.scss
+++ b/#source/scss/what-about.scss
@@ -1,15 +1,18 @@
 .what-about {
+	background: $white;
 	padding-top: 10rem;
 
 	.wrapper {
 		display: flex;
-		margin-right: auto;
+		justify-content: center;
 		padding-left: 18.5rem;
-		padding-right: 15.5rem;
+		padding-right: 18.5rem;
+
 
 		.block {
 			max-width: 85rem;
 			position: relative;
+			z-index: 2;
 
 			&::before {
 				content: '';
@@ -19,7 +22,7 @@
 				background: url(/img/bus.png) center/contain no-repeat;
 				width: 18rem;
 				height: 11rem;
-				z-index: -1;
+				z-index: 1;
 			}
 
 			&::after {
@@ -30,7 +33,7 @@
 				background: url(/img/hand.png) center/contain no-repeat;
 				width: 14.3rem;
 				height: 6.7rem;
-				z-index: -1;
+				z-index: 1;
 			}
 
 			h4,
@@ -39,6 +42,7 @@
 				font-weight: 400;
 				color: #8E8E8E;
 				text-align: center;
+				z-index: inherit;
 
 				a {
 					display: inline-flex;
