add nouislider style

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -5,6 +5,7 @@
 @import "main-scss/fonts.scss";
 @import "main-scss/variables.scss";
 @import "main-scss/null.scss";
+@import 'nouislider.scss';
 
 body,
 html {
