--- a/#source/scss/what-about.scss
+++ b/#source/scss/what-about.scss
@@ -1,7 +1,7 @@
 .what-about {
 	background: $white;
 	padding-top: 10rem;
-	margin-bottom: 8rem;
+	padding-bottom: 8rem;
 
 	.wrapper {
 		display: flex;
