--- a/#source/scss/cards.scss
+++ b/#source/scss/cards.scss
@@ -1,4 +1,5 @@
 .cards {
+   position: relative;
    z-index: 2;
    padding: 4rem 0;
    background: linear-gradient(180deg, #F1F1F1 0%, #EBEBEB 42.7%, #FFFFFF 98.3%);
