--- a/#source/scss/contact.scss
+++ b/#source/scss/contact.scss
@@ -115,8 +115,8 @@
 
 		h2 {
 			font-weight: 500;
-			font-size: 32px;
-			line-height: 48px;
+			font-size: 3.2rem;
+			line-height: 1.3;
 			color: $dark;
 			margin-bottom: 4.8rem;
 		}
@@ -164,6 +164,83 @@
 				padding-right: 3em;
 
 				&:last-of-type {
+					padding-right: 0;
+				}
+			}
+		}
+	}
+}
+
+@include respond(lg-screen) {
+	.contact {
+		padding-bottom: 5rem;
+
+		.contact-info {
+			flex-wrap: wrap;
+			margin-bottom: 5rem;
+
+			>div {
+				width: 100%;
+				margin: 0 0 2.5rem 5rem;
+				padding: 0 0 0 5rem;
+
+				&:before {
+					content: '' !important;
+					left: 0;
+					right: auto;
+				}
+
+				>div {
+					margin-bottom: 0;
+				}
+			}
+		}
+
+		.form-wrapper {
+			padding: 5rem 4rem;
+
+			h2 {
+				margin-bottom: 3rem;
+			}
+
+			.group-wrapper {
+				>div {
+					width: 50%;
+					margin-bottom: 2rem;
+
+					&:nth-last-of-type(2) {
+						padding-right: 0;
+					}
+
+					&:last-of-type {
+						padding-right: 0;
+					}
+				}
+			}
+		}
+	}
+}
+
+@include respond(m-screen) {
+	.contact {
+		.contact-info {
+			>div {
+				margin: 0 0 2.5rem 1rem;
+				padding: 0 0 0 2.5rem;
+			}
+		}
+
+		.form-wrapper {
+			padding: 3rem 2rem;
+
+			.group-wrapper {
+				.group.check {
+					width: 100%;
+				}
+
+				>div {
+					width: 100%;
+					margin-bottom: 2rem;
 					padding-right: 0;
 				}
 			}
