--- a/#source/scss/main-scss/footer.scss
+++ b/#source/scss/main-scss/footer.scss
@@ -1,6 +1,5 @@
 .footer {
 	width: 100%;
-	height: 10.4rem;
 	background: none;
 
 	.wrapper {
@@ -8,7 +7,7 @@
 		align-items: center;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		height: 100%;
+		padding: 4.4rem 0rem;
 		position: relative;
 
 		&:before {
@@ -26,13 +25,13 @@
 			width: 100%;
 			max-width: 60rem;
 
-			.item:last-of-type {
-				margin-left: auto;
-			}
-
 			.item:first-of-type {
 				margin-left: 0;
 				margin-right: 1rem;
+			}
+
+			.item:last-of-type {
+				margin-left: auto;
 			}
 		}
 
@@ -62,6 +61,30 @@
 				font-family: 'Roboto';
 				font-weight: 400;
 				color: $gray;
+			}
+		}
+	}
+}
+
+@include respond(m-screen) {
+	.footer {
+		.wrapper {
+			padding: 3rem 0rem;
+
+			.right-block {
+				flex-wrap: wrap;
+
+				.item {
+					margin-bottom: 1.5rem;
+				}
+
+				.item:last-of-type {
+					margin-left: 0;
+				}
+			}
+
+			.item {
+				margin-left: 0;
 			}
 		}
 	}
