--- a/#source/scss/product-card.scss
+++ b/#source/scss/product-card.scss
@@ -86,6 +86,8 @@
 					font-size: 2rem;
 					line-height: 1.5;
 					transition: color .3s ease;
+					flex-wrap: nowrap;
+					white-space: nowrap;
 				}
 
 				.btn {
@@ -112,11 +114,11 @@
 					position: absolute;
 					top: -6rem;
 					left: -5rem;
-						text-align: center;
-						height: 100%;
-						background: #FFFFFF;
-						border-radius: .6rem;
-						padding: 1.2rem 1rem;
+					text-align: center;
+					height: 100%;
+					background: #FFFFFF;
+					border-radius: .6rem;
+					padding: 1.2rem 1rem;
 					font-weight: 600;
 					font-size: .9rem;
 					line-height: 1.3;
@@ -134,7 +136,7 @@
 						border-left: 1rem solid transparent;
 						border-right: 1rem solid transparent;
 						border-top: 1rem solid $white;
-					}					
+					}
 
 					a {
 						color: $gray;
@@ -145,7 +147,6 @@
 					}
 				}
 			}
-
 		}
 	}
 }
