--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -53,6 +53,14 @@ a {
 	height: 100%;
 	width: 100%;
 	padding: 0 4.8rem;
+
+	@include respond(lg-screen) {
+		padding: 0 3rem;
+	}
+
+	@include respond(m-screen) {
+		padding: 0 1.5rem;
+	}
 }
 
 .container-header {
