--- a/#source/scss/what-about.scss
+++ b/#source/scss/what-about.scss
@@ -1,7 +1,7 @@
 .what-about {
 	background: $white;
 	padding-top: 10rem;
-	margin-bottom: 8rem;
+	padding-bottom: 8rem;
 
 	.wrapper {
 		display: flex;
@@ -70,12 +70,50 @@
 }
 
 @media screen and (max-width:1200px) {
-	.about {
+	.what-about {
 		.wrapper {
 			.block {
 				p {
 					br {
 						display: none;
+					}
+				}
+			}
+		}
+	}
+}
+
+@include respond(m-screen) {
+	.what-about {
+		padding-top: 5rem;
+		padding-bottom: 5rem;
+
+		.wrapper {
+			padding-left: 0;
+			padding-right: 0;
+
+			.block {
+				&::before {
+					content: none;
+				}
+
+				&::after {
+					content: none;
+				}
+
+				h4 {
+					font-size: 2.4rem;
+					line-height: 1.25;
+					letter-spacing: 0.03em;
+					margin-bottom: 3rem;
+				}
+
+				p {
+					font-size: 1.9rem;
+					line-height: 1.85;
+
+					&:last-of-type {
+						text-align: end;
 					}
 				}
 			}
