--- a/#source/scss/products.scss
+++ b/#source/scss/products.scss
@@ -1,6 +1,6 @@
 .products-content {
   display: grid;
-  grid-template-columns: 286px 100%;
+  grid-template-columns: 286px 1fr;
   column-gap: 5.7rem;
 }
 
