--- a/css/style.css
+++ b/css/style.css
@@ -1584,8 +1584,8 @@ a:hover {
 .products-content {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 286px 5.7rem 100%;
-  grid-template-columns: 286px 100%;
+  -ms-grid-columns: 286px 5.7rem 1fr;
+  grid-template-columns: 286px 1fr;
   -webkit-column-gap: 5.7rem;
      -moz-column-gap: 5.7rem;
           column-gap: 5.7rem;
