--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -5,7 +5,7 @@
 @import "main-scss/fonts.scss";
 @import "main-scss/variables.scss";
 @import "main-scss/null.scss";
-@import 'nouislider.scss';
+@import 'main-scss/nouislider.scss';
 
 body,
 html {
@@ -72,6 +72,62 @@ a {
 }
 
 
+.prew-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 6.4rem;
+	margin-top: 3rem;
+
+	.text-block {
+		width: 100%;
+		max-width: 54rem;
+		margin-right: 1rem;
+
+		h1 {
+			font-weight: 500;
+			font-size: 4.8rem;
+			line-height: 1.33;
+			color: $dark;
+			margin-bottom: 3rem;
+		}
+
+		h4 {
+			font-weight: 400;
+			font-size: 2.4rem;
+			line-height: 1.5;
+			color: $gray;
+		}
+	}
+
+	.img-wrapper {
+		max-width: 64rem;
+		border-radius: .8rem;
+		overflow: hidden;
+
+		img {
+			width: 100%;
+		}
+	}
+
+	@include respond(m-screen) {
+		margin-bottom: 5rem;
+		flex-wrap: wrap;
+
+		.text-block {
+			max-width: 64rem;
+			margin-right: 0;
+			margin-bottom: 2rem;
+
+			h1 {
+				margin-bottom: 2rem;
+			}
+
+		}
+	}
+}
+
+
 // Connecting pages style
 @import "main-scss/header.scss";
 @import "main-scss/footer.scss";
@@ -84,8 +140,10 @@ a {
 
 @import "main-screen.scss";
 @import "what-about.scss";
-@import "autosearch.scss";
+@import "autosearch-block.scss";
 @import "cards.scss";
 
 @import "about.scss";
 @import "contact.scss";
+
+@import "autosearch.scss";
