--- a/#source/scss/main-scss/range-slider.scss
+++ b/#source/scss/main-scss/range-slider.scss
@@ -1,37 +1,54 @@
 .range-slider {
-  height: 1px;
-  border: none;
-  box-shadow: none;
-  background: rgba(0, 0, 0, 0.2);
-  margin-top: 4rem;
-  margin-bottom: 2.8rem;
+   height: 1px;
+   border: none;
+   box-shadow: none;
+   background: rgba(0, 0, 0, 0.2);
+   margin-top: 4rem;
+   margin-bottom: 2.8rem;
 
-  .noUi-connect {
-    background: $blue;
-  }
+   .noUi-connect {
+      background: $blue;
+   }
 
-  .noUi-origin {
-    .noUi-handle {
-      width: 1.6rem;
-      height: 1.6rem;
-      border-radius: 50%;
-      border-color: $blue;
-      box-shadow: none;
-      top: -7px;
-      right: -8px;
+   .noUi-origin {
+      .noUi-handle {
+         width: 1.6rem;
+         height: 1.6rem;
+         border-radius: 50%;
+         border-color: $blue;
+         box-shadow: none;
+         top: -7px;
 
-      &:after,
-      &:before {
-        display: none;
+         &:after,
+         &:before {
+            display: none;
+         }
+
+         &.noUi-handle-lower {
+            right: -15px;
+
+            .noUi-tooltip {
+               left: 0;
+            }
+         }
+
+         &.noUi-handle-upper {
+            right: 0;
+
+            .noUi-tooltip {
+               right: 0;
+               left: auto;
+            }
+         }
+
+         .noUi-tooltip {
+            padding: 0;
+            border: none;
+            background: none;
+            font-size: 1.6rem;
+            color: $dark;
+            transform: none;
+         }
       }
-
-      .noUi-tooltip {
-        padding: 0;
-        border: none;
-        background: none;
-        font-size: 1.6rem;
-        color: $dark;
-      }
-    }
-  }
+   }
 }
